--- a/notebooks/agent.ipynb
+++ b/notebooks/agent.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath(\"..\"))"
    ]
   },
   {
@@ -20,15 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List, Optional, Any\n",
+    "from typing import Any\n",
     "from datetime import datetime\n",
     "\n",
-    "import httpx\n",
-    "from loguru import logger\n",
     "from smolagents import CodeAgent, LiteLLMModel, Tool, PromptTemplates\n",
     "import yaml\n",
     "\n",
-    "import src.agent.adapters.tools  as tools"
+    "import src.agent.adapters.tools as tools"
    ]
   },
   {
@@ -38,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_base=None\n",
+    "api_base = None\n",
     "\n",
     "# model_id=\"ollama/qwen3:4b\"\n",
     "# api_base=\"http://localhost:11434\"\n",
@@ -46,7 +44,7 @@
     "# anthorpic\n",
     "# model_id=\"claude-3-7-sonnet-20250219\"\n",
     "\n",
-    "#openai\n",
+    "# openai\n",
     "model_id = \"gpt-4o\"\n",
     "\n",
     "# google\n",
@@ -54,8 +52,7 @@
     "# model_id = \"gemin/gemini-2.5-flash-preview-04-17\"\n",
     "# model_id = \"gemini/gemini-2.5-pro-preview-05-06\"\n",
     "\n",
-    "kwargs = {\"tools_api_base\": \"http://localhost:5050\",\n",
-    "          \"tools_api_limit\": 100}"
+    "kwargs = {\"tools_api_base\": \"http://localhost:5050\", \"tools_api_limit\": 100}"
    ]
   },
   {
@@ -79,7 +76,9 @@
     "    base_prompts = yaml.safe_load(file)\n",
     "\n",
     "\n",
-    "base_prompts['system_prompt'] = base_prompts['system_prompt'].replace(\"{{current_date}}\", datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "base_prompts[\"system_prompt\"] = base_prompts[\"system_prompt\"].replace(\n",
+    "    \"{{current_date}}\", datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    ")\n",
     "prompt_templates = PromptTemplates(**base_prompts)"
    ]
   },
@@ -93,12 +92,16 @@
     "class FinalAnswerTool(Tool):\n",
     "    name = \"final_answer\"\n",
     "    description = \"Provides a final answer to the given problem.\"\n",
-    "    inputs = {\"answer\": {\"type\": \"any\", \"description\": \"The final answer to the problem\"}}\n",
-    "    outputs = {\"result\": {\"type\": \"any\", \"description\": \"The final response to the problem\"}}\n",
+    "    inputs = {\n",
+    "        \"answer\": {\"type\": \"any\", \"description\": \"The final answer to the problem\"}\n",
+    "    }\n",
+    "    outputs = {\n",
+    "        \"result\": {\"type\": \"any\", \"description\": \"The final response to the problem\"}\n",
+    "    }\n",
     "    output_type = \"any\"\n",
     "\n",
     "    def forward(self, answer: Any) -> Any:\n",
-    "        return answer\n"
+    "        return answer"
    ]
   },
   {
@@ -108,20 +111,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = CodeAgent(tools=[tools.CompareData(**kwargs), \n",
-    "                         tools.ConvertIdToName(**kwargs),\n",
-    "                         tools.ConvertNameToId(**kwargs),\n",
-    "                         tools.GetData(**kwargs),\n",
-    "                         tools.GetInformation(**kwargs),\n",
-    "                         tools.GetNeighbors(**kwargs),\n",
-    "                         tools.PlotData(**kwargs),\n",
-    "                         FinalAnswerTool()\n",
-    "                        ],  \n",
-    "                  model=model, \n",
-    "                  stream_outputs=True,\n",
-    "                  additional_authorized_imports=[\"pandas\", \"numpy\"],\n",
-    "                  prompt_templates=prompt_templates,\n",
-    "                  max_steps=5)"
+    "agent = CodeAgent(\n",
+    "    tools=[\n",
+    "        tools.CompareData(**kwargs),\n",
+    "        tools.ConvertIdToName(**kwargs),\n",
+    "        tools.ConvertNameToId(**kwargs),\n",
+    "        tools.GetData(**kwargs),\n",
+    "        tools.GetInformation(**kwargs),\n",
+    "        tools.GetNeighbors(**kwargs),\n",
+    "        tools.PlotData(**kwargs),\n",
+    "        FinalAnswerTool(),\n",
+    "    ],\n",
+    "    model=model,\n",
+    "    stream_outputs=True,\n",
+    "    additional_authorized_imports=[\"pandas\", \"numpy\"],\n",
+    "    prompt_templates=prompt_templates,\n",
+    "    max_steps=5,\n",
+    ")"
    ]
   },
   {
@@ -778,7 +784,7 @@
     "    \"Can you create a plot for the adjacent sensors of asset BA101 for 1st January 2025?\",\n",
     "    \"What is the id of TI-T0022?\",\n",
     "    \"What is the name of asset id c831fadb-d620-4007-bdda-4593038c87f9?\",\n",
-    "    \"Can you provide me the highest value for June 2025 for TI-T0022?\"\n",
+    "    \"Can you provide me the highest value for June 2025 for TI-T0022?\",\n",
     "]"
    ]
   },
@@ -849,7 +855,7 @@
     "\n",
     "import base64\n",
     "import io\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -866,14 +872,16 @@
     "\n",
     "# 3. Load Image from Buffer using Matplotlib\n",
     "# mpimg.imread can read from a file-like object\n",
-    "img_data = mpimg.imread(image_buffer, format='png') # Specify format if known (e.g., 'png', 'jpeg')\n",
+    "img_data = mpimg.imread(\n",
+    "    image_buffer, format=\"png\"\n",
+    ")  # Specify format if known (e.g., 'png', 'jpeg')\n",
     "\n",
     "# 4. Display Image using Matplotlib\n",
-    "plt.figure(figsize=(8, 6)) # Optional: Adjust figure size\n",
+    "plt.figure(figsize=(8, 6))  # Optional: Adjust figure size\n",
     "plt.imshow(img_data)\n",
-    "plt.axis('off')  # Turn off axis numbers and ticks for a cleaner image display\n",
+    "plt.axis(\"off\")  # Turn off axis numbers and ticks for a cleaner image display\n",
     "plt.title(\"Decoded Image\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
