--- a/notebooks/comparison.ipynb
+++ b/notebooks/comparison.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath(\"..\"))"
    ]
   },
   {
@@ -20,16 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import base64\n",
-    "import io\n",
-    "from typing import Dict, List, Optional\n",
+    "from typing import Dict\n",
     "\n",
-    "import httpx\n",
-    "from loguru import logger\n",
-    "from smolagents import Tool, tools\n",
+    "from smolagents import tools\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "from src.agent.adapters.tools.base import BaseTool"
@@ -57,7 +51,7 @@
     "    \"null\",\n",
     "    \"list\",\n",
     "    \"dict\",\n",
-    "    \"dataframe\"\n",
+    "    \"dataframe\",\n",
     "]"
    ]
   },
@@ -86,7 +80,7 @@
     "        else:\n",
     "            comparison = data.describe()\n",
     "\n",
-    "        return {\"data\": comparison}\n"
+    "        return {\"data\": comparison}"
    ]
   },
   {
