--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath(\"..\"))"
    ]
   },
   {
@@ -20,12 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "from typing import Dict, List, Optional\n",
     "\n",
-    "import httpx\n",
-    "from loguru import logger\n",
-    "from smolagents import Tool, tools\n",
+    "from smolagents import tools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -53,7 +50,7 @@
     "    \"any\",\n",
     "    \"null\",\n",
     "    \"list\",\n",
-    "    \"dict\"\n",
+    "    \"dict\",\n",
     "]"
    ]
   },
@@ -179,9 +176,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = ['a1ff2d3a-6fa9-492a-af51-cfd579cb2308',\n",
-    " \"52f50206-c6b9-47a4-bead-fe791f71cb7c\",\n",
-    " '9b71065a-2273-4173-9785-2487d1573dd7']"
+    "ids = [\n",
+    "    \"a1ff2d3a-6fa9-492a-af51-cfd579cb2308\",\n",
+    "    \"52f50206-c6b9-47a4-bead-fe791f71cb7c\",\n",
+    "    \"9b71065a-2273-4173-9785-2487d1573dd7\",\n",
+    "]"
    ]
   },
   {
@@ -232,7 +231,12 @@
     }
    ],
    "source": [
-    "out = tool.forward(ids,  start_date=\"2025-04-01T00:00:00\", end_date=\"2025-04-01T23:59:00\", aggregation=\"min\")"
+    "out = tool.forward(\n",
+    "    ids,\n",
+    "    start_date=\"2025-04-01T00:00:00\",\n",
+    "    end_date=\"2025-04-01T23:59:00\",\n",
+    "    aggregation=\"min\",\n",
+    ")"
    ]
   },
   {
@@ -265,7 +269,12 @@
     }
    ],
    "source": [
-    "out = tool.forward(ids,  start_date=\"2025-04-01T00:00:00\", end_date=\"2025-04-01T23:59:00\", aggregation=\"h\")"
+    "out = tool.forward(\n",
+    "    ids,\n",
+    "    start_date=\"2025-04-01T00:00:00\",\n",
+    "    end_date=\"2025-04-01T23:59:00\",\n",
+    "    aggregation=\"h\",\n",
+    ")"
    ]
   },
   {
@@ -491,7 +500,7 @@
     }
    ],
    "source": [
-    "out['data']"
+    "out[\"data\"]"
    ]
   },
   {
@@ -514,7 +523,12 @@
     }
    ],
    "source": [
-    "out = tool.forward(ids,  start_date=\"2025-04-01T00:00:00\", end_date=\"2025-04-01T23:59:00\", aggregation=\"d\")"
+    "out = tool.forward(\n",
+    "    ids,\n",
+    "    start_date=\"2025-04-01T00:00:00\",\n",
+    "    end_date=\"2025-04-01T23:59:00\",\n",
+    "    aggregation=\"d\",\n",
+    ")"
    ]
   },
   {
@@ -579,7 +593,7 @@
     }
    ],
    "source": [
-    "out['data']"
+    "out[\"data\"]"
    ]
   },
   {
@@ -589,10 +603,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = [None, \"12\", 12, \"PA101\",\n",
-    "       'a1ff2d3a-6fa9-492a-af51-cfd579cb2308',\n",
-    " \"52f50206-c6b9-47a4-bead-fe791f71cb7c\",\n",
-    " '9b71065a-2273-4173-9785-2487d1573dd7']"
+    "ids = [\n",
+    "    None,\n",
+    "    \"12\",\n",
+    "    12,\n",
+    "    \"PA101\",\n",
+    "    \"a1ff2d3a-6fa9-492a-af51-cfd579cb2308\",\n",
+    "    \"52f50206-c6b9-47a4-bead-fe791f71cb7c\",\n",
+    "    \"9b71065a-2273-4173-9785-2487d1573dd7\",\n",
+    "]"
    ]
   },
   {
@@ -684,7 +703,7 @@
     }
    ],
    "source": [
-    "out['data']"
+    "out[\"data\"]"
    ]
   },
   {
@@ -702,8 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = ['84200101-d718-45bf-bfae-529513586ddd',\n",
-    "  '18b04353-839d-40a1-84c1-9b547d09dd80']"
+    "ids = [\"84200101-d718-45bf-bfae-529513586ddd\", \"18b04353-839d-40a1-84c1-9b547d09dd80\"]"
    ]
   },
   {
@@ -724,8 +742,18 @@
     }
    ],
    "source": [
-    "out = tool.forward(ids[0],  start_date=\"2025-04-01T00:00:00\", end_date=\"2025-04-01T23:59:00\", aggregation=\"h\")\n",
-    "out2 = tool.forward(ids[1],  start_date=\"2025-04-01T00:00:00\", end_date=\"2025-04-01T23:59:00\", aggregation=\"h\")"
+    "out = tool.forward(\n",
+    "    ids[0],\n",
+    "    start_date=\"2025-04-01T00:00:00\",\n",
+    "    end_date=\"2025-04-01T23:59:00\",\n",
+    "    aggregation=\"h\",\n",
+    ")\n",
+    "out2 = tool.forward(\n",
+    "    ids[1],\n",
+    "    start_date=\"2025-04-01T00:00:00\",\n",
+    "    end_date=\"2025-04-01T23:59:00\",\n",
+    "    aggregation=\"h\",\n",
+    ")"
    ]
   },
   {
