--- a/notebooks/file_export.ipynb
+++ b/notebooks/file_export.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath(\"..\"))"
    ]
   },
   {
@@ -20,17 +20,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import base64\n",
     "import io\n",
-    "from typing import Dict, List, Optional\n",
+    "from typing import Dict\n",
     "from uuid import uuid4\n",
     "\n",
-    "import boto3\n",
-    "import httpx\n",
-    "from loguru import logger\n",
-    "from smolagents import Tool, tools\n",
+    "from smolagents import tools\n",
     "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import nc_py_api\n",
     "\n",
@@ -59,7 +54,7 @@
     "    \"null\",\n",
     "    \"list\",\n",
     "    \"dict\",\n",
-    "    \"dataframe\"\n",
+    "    \"dataframe\",\n",
     "]"
    ]
   },
@@ -86,21 +81,25 @@
     "        if data.empty:\n",
     "            return {\"url\": None}\n",
     "\n",
-    "        nc = nc_py_api.Nextcloud(nextcloud_url=os.getenv(\"NX_URL\"), nc_auth_user=os.getenv(\"NX_USER\"), nc_auth_pass=os.getenv(\"NX_PASSWORD\"))\n",
+    "        nc = nc_py_api.Nextcloud(\n",
+    "            nextcloud_url=os.getenv(\"NX_URL\"),\n",
+    "            nc_auth_user=os.getenv(\"NX_USER\"),\n",
+    "            nc_auth_pass=os.getenv(\"NX_PASSWORD\"),\n",
+    "        )\n",
     "\n",
     "        file_name = f\"agent/{str(uuid4())}.csv\"\n",
-    "        \n",
+    "\n",
     "        buffer = io.BytesIO()\n",
-    "        \n",
+    "\n",
     "        # DataFrame als CSV in den BytesIO-Puffer schreiben\n",
     "        data.to_csv(buffer, index=False)\n",
-    "        \n",
+    "\n",
     "        buffer.seek(0)\n",
-    "        nc.files.upload_stream(file_name, buffer) \n",
-    "        \n",
+    "        nc.files.upload_stream(file_name, buffer)\n",
+    "\n",
     "        share = nc.files.sharing.create(\n",
-    "            path=file_name,       # path to the folder in your Nextcloud\n",
-    "            share_type=3             # 3 = public link\n",
+    "            path=file_name,  # path to the folder in your Nextcloud\n",
+    "            share_type=3,  # 3 = public link\n",
     "        )\n",
     "        return {\"url\": share.url}"
    ]
@@ -112,8 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kwargs = {\"tools_api_base\": \"http://localhost:5050\",\n",
-    "          \"tools_api_limit\": \"100\"}"
+    "kwargs = {\"tools_api_base\": \"http://localhost:5050\", \"tools_api_limit\": \"100\"}"
    ]
   },
   {
