--- a/notebooks/information.ipynb
+++ b/notebooks/information.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath(\"..\"))"
    ]
   },
   {
@@ -20,12 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "from typing import Dict, List\n",
     "\n",
-    "import httpx\n",
     "from loguru import logger\n",
-    "from smolagents import Tool, tools\n",
+    "from smolagents import tools\n",
     "\n",
     "from src.agent.adapters.tools.base import BaseTool"
    ]
@@ -51,7 +49,7 @@
     "    \"any\",\n",
     "    \"null\",\n",
     "    \"list\",\n",
-    "    \"dict\"\n",
+    "    \"dict\",\n",
     "]"
    ]
   },
@@ -87,7 +85,7 @@
     "            else:\n",
     "                logger.warning(f\"No information found for asset id {asset_id}\")\n",
     "\n",
-    "        return {\"assets\": response}\n"
+    "        return {\"assets\": response}"
    ]
   },
   {
@@ -117,8 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = ['9280dee1-5dbf-45b7-9e29-c805c4555ba6',\n",
-    "  'c831fadb-d620-4007-bdda-4593038c87f9']"
+    "ids = [\"9280dee1-5dbf-45b7-9e29-c805c4555ba6\", \"c831fadb-d620-4007-bdda-4593038c87f9\"]"
    ]
   },
   {
