--- a/notebooks/llm_call.ipynb
+++ b/notebooks/llm_call.ipynb
@@ -93,7 +93,7 @@
     "            messages=messages,\n",
     "            response_model=response_model,\n",
     "            model=self.model_id,\n",
-    "            temperature=self.temperature\n",
+    "            temperature=self.temperature,\n",
     "        )\n",
     "\n",
     "        return response"
@@ -107,9 +107,8 @@
    "outputs": [],
    "source": [
     "llm = LLM(\n",
-    "            kwargs={\"model_id\": \"claude-sonnet-4-20250514\",\n",
-    "                    \"temperature\": 0.0},\n",
-    "        )"
+    "    kwargs={\"model_id\": \"claude-sonnet-4-20250514\", \"temperature\": 0.0},\n",
+    ")"
    ]
   },
   {
@@ -121,7 +120,7 @@
    "source": [
     "class LLMResponseModel(BaseModel):\n",
     "    chain_of_thought: str\n",
-    "    response: str\n"
+    "    response: str"
    ]
   },
   {
