--- a/notebooks/name2id.ipynb
+++ b/notebooks/name2id.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath(\"..\"))"
    ]
   },
   {
@@ -20,12 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "from typing import Dict, List\n",
     "\n",
-    "import httpx\n",
     "from loguru import logger\n",
-    "from smolagents import Tool, tools\n",
+    "from smolagents import tools\n",
     "\n",
     "from src.agent.adapters.tools.base import BaseTool"
    ]
@@ -51,7 +49,7 @@
     "    \"any\",\n",
     "    \"null\",\n",
     "    \"list\",\n",
-    "    \"dict\"\n",
+    "    \"dict\",\n",
     "]"
    ]
   },
@@ -117,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = ['TI-T0023', 'PA101']"
+    "names = [\"TI-T0023\", \"PA101\"]"
    ]
   },
   {
