--- a/notebooks/plot.ipynb
+++ b/notebooks/plot.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath(\"..\"))"
    ]
   },
   {
@@ -33,14 +33,10 @@
    "source": [
     "import base64\n",
     "import io\n",
-    "from typing import Dict, List, Optional\n",
+    "from typing import Dict\n",
     "\n",
-    "import httpx\n",
-    "from loguru import logger\n",
-    "from smolagents import Tool, tools\n",
+    "from smolagents import tools\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "from src.agent.adapters.tools.base import BaseTool"
@@ -68,7 +64,7 @@
     "    \"null\",\n",
     "    \"list\",\n",
     "    \"dict\",\n",
-    "    \"dataframe\"\n",
+    "    \"dataframe\",\n",
     "]"
    ]
   },
@@ -192,7 +188,7 @@
     "                data.index = data.index.floor(\"h\")\n",
     "                detected_freq = \"h\"\n",
     "\n",
-    "        return data, detected_freq\n"
+    "        return data, detected_freq"
    ]
   },
   {
@@ -202,8 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kwargs = {\"tools_api_base\": \"http://localhost:5050\",\n",
-    "          \"tools_api_limit\": \"100\"}"
+    "kwargs = {\"tools_api_base\": \"http://localhost:5050\", \"tools_api_limit\": \"100\"}"
    ]
   },
   {
@@ -271,14 +266,16 @@
     "\n",
     "# 3. Load Image from Buffer using Matplotlib\n",
     "# mpimg.imread can read from a file-like object\n",
-    "img_data = mpimg.imread(image_buffer, format='png') # Specify format if known (e.g., 'png', 'jpeg')\n",
+    "img_data = mpimg.imread(\n",
+    "    image_buffer, format=\"png\"\n",
+    ")  # Specify format if known (e.g., 'png', 'jpeg')\n",
     "\n",
     "# 4. Display Image using Matplotlib\n",
-    "plt.figure(figsize=(8, 6)) # Optional: Adjust figure size\n",
+    "plt.figure(figsize=(8, 6))  # Optional: Adjust figure size\n",
     "plt.imshow(img_data)\n",
-    "plt.axis('off')  # Turn off axis numbers and ticks for a cleaner image display\n",
+    "plt.axis(\"off\")  # Turn off axis numbers and ticks for a cleaner image display\n",
     "# plt.title(\"Decoded Image\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
